# Color_Range_RobotSoccer

Detection Robot Soccer/uavision/: CMakeLists.txt
Detection Robot Soccer/uavision/src/: CMakeLists.txt
Detection Robot Soccer/uavision/src/apps/: CMakeLists.txt  fcalibVision.cpp  filtering.cpp  frontVision.cpp  kcalibVision.cpp  kinectVision.cpp  ocalibVision.cpp  omniVision.cpp  watershed.cpp
Detection Robot Soccer/uavision/src/libs/: CMakeLists.txt
Detection Robot Soccer/uavision/src/libs/commTCP/: AbstractSocket.cpp  AbstractSocket.h  CMakeLists.txt  ServerSocket.cpp  ServerSocket.h  Socket.cpp  Socket.h  SocketState.cpp  SocketState.h  udpclientserver.cpp  udpclientserver.h
Detection Robot Soccer/uavision/src/libs/uavision/: Camera.h  CameraFromFile.cpp  CameraFromFile.h  CameraKinect.cpp  CameraKinect.h  CameraOpenCV.cpp  CameraOpenCV.h  CameraSettingsOpenCV.cpp  ScanLines.cpp  ScanLines.h  deteksi objek.cpp
